# meadoc

./: .coverage  AGENTS.md  README.md  main.py  pyproject.toml  pyrightconfig.json
src/meadow/: __init__.py  checker.py  cli.py  config.py  formatter.py  generator.py  models.py  parser.py  traversal.py
tests/: __init__.py  conftest.py  test_cli.py  test_meadow.py
