[project]
name = "meadoc"
version = "0.1.0"
description = "A docstring linter and generator for Python projects using the meadow docstring format"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
meadoc = "meadow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meadow"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
